fixed the overlay so its visible.

--- a/css-positioning/absolute.css
+++ b/css-positioning/absolute.css
@@ -38,5 +38,9 @@
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.75));
 
   /* your code here */
-  position: relative;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
